--- a/app/package.json
+++ b/app/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "^7.27.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "prop-types": "^15.8.1",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
+    "prop-types": "^15.8.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
